[tool.poetry]
name = "forms-api-spreadsheets"
version = "0.1.0"
description = "Retrieve data from Google Spreadsheets in order to create customized Google Forms"
authors = ["Franco Nahuel Capurro <franncapurro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-api-python-client = "^2.140.0"
oauth2client = "^4.1.3"
gspread = "^6.1.2"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
